2016-12-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS/MiscXS.xs,
	* tp/Texinfo/MiscXS/miscxs.c (merge_text): New function.
	* tp/Texinfo/Parser.pm: Add a 'UNITCHECK' section to override
	'_merge_text' with Texinfo::MiscXS::merge_text.
	(_merge_text): Reorder a condition to make executing a regex
	less likely.

2016-12-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/protect_character_in_texinfo.t,
	tp/t/reference_to_text_in_tree.t, tp/t/test_brace_count.t, 
	tp/t/test_fill_gaps_in_sectioning.t, 
	tp/t/test_is_content_empty.t,
	tp/t/test_protect_hashchar_at_line_beginning.t: Use 
	Texinfo::ModulePath.

2016-12-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <@menu> Check if parent
	command is defined before using it as a hash key.

2016-12-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/ModulePath.pm.in (init): Take extra argument 'updirs'
	allowing to find 'top_srcdir' from the path of the currently
	running Perl script.

	* tp/t/test_sort.t, tp/t/accents.t, tp/t/automatic_menus.t, 
	t/collect_spaces.t, tp/t/do_master_menu.t, tp/t/fix_texinfo.t, 
	t/index_before_item.t, tp/t/nodenormalization.t: Use 
	Texinfo::ModulePath module instead of adding directories to @INC
	manually.

2016-12-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XSLoader (override): Check if source subroutine is
	defined.

2016-12-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS.pm: New file.
	* tp/Texinfo/MiscXS/,
	tp/Texinfo/MiscXS/configure.ac,
	tp/Texinfo/MiscXS/Makefile.am,
	tp/Texinfo/MiscXS/MiscXS.xs,
	tp/Texinfo/MiscXS/miscxs.c,
	tp/Texinfo/MiscXS/miscxs.h: New files.
	* tp/Texinfo/ModulePath.pm.in: Add 'Texinfo/MiscXS' directory to
	module search path.
	* tp/Texinfo/XSLoader (override): New function.
	* tp/Texinfo/Convert/Unicode.pm: Add 'UNITCHECK' section calling
	'Texinfo::MiscXS::unicode_text' to override 'unicode_text'.

2016-12-24  Gavin Smith  <gavinsmith0123@gmail.com>
